--- a/Pages/about.css
+++ b/Pages/about.css
@@ -14,93 +14,83 @@ body{
 
 
 .container{
-    max-width: 1120px;
-    margin-inline:auto;
+    width: min(90%, 1320px);
+    margin-inline: auto;
 }
-/* header{
+
+/* nav bar style */
+header{
+
     position: fixed;
+    height: 110px;
     top: 0;
     left: 0;
-    height: 72px;
+    right: 0;
+    z-index: 100;
+    background-color: rgba(32, 48, 59,0.9);
+}
+header .main-nav{
+  display: flex;
+  gap: 30px;
+  justify-content: space-between;
+  align-items: center;
+
+}
+.main-nav .nav-links{
+ display: flex;
+ gap: 20px;
+ align-items: center;
+ justify-content: center;
+
+  
+}
+.main-nav .logo-img{
+  max-height: 110px;
+    line-height: 80px;
+    color: #fff;
+    font-size: 28px;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    padding: 20px;
+}
+.main-nav img{
     width: 100%;
-   
-} */
-/* desktop menu style */
-nav{
-  position: fixed;
-  top: 0;
-  left: 0;
-  
-  width: 100vw;
-  display: flex; 
-  
+    /* overflow: hidden; */
 }
-.desktop{
-background-color: #111;
-width: 100%;
-height: 3.3rem;
-display: flex;
-justify-content: space-between;
-align-items: center;
-padding: 20px;
-}
-.desktop h1{
-    margin-top: 1.5rem;
-    color: white;
-}
-
-img{
-    width: 80px;
-}
-.logo{
-    margin-top: 5px;
-    display: flex;
-}
-
-.link-menus{
+.nav-links li{
+    padding-left: 25px;
+    padding-right: 25px;
     list-style: none;
-    gap: 2rem;
-    display: flex;
-   
+}
+.nav-links li a{
+  text-decoration: none;
+    font-weight: 300;
+    font-size: 14px;
+    text-transform: capitalize;
+    color: #fff;
+    height: 40px;
+    line-height: 40px;
+    border: transparent;
+    letter-spacing: 1px;
 }
 
-a{
-    color: white;
-   text-transform: uppercase;
-    text-decoration: none;
+.nav-links li .contact-us{
+    font-size: 14px;
+    color: #fff;
+    background-color: #43ba7f;
+    padding: 10px 20px !important;
+    display: inline-block;
+    border-radius: 5px;
+    font-weight: 500;
+    text-transform: capitalize;
+    height: auto;
+    line-height: 25px;
+    letter-spacing: 0.5px;
+    transition: all .3s;
     
 }
-
-a:hover{
-  background-color: #218838;
-  color: #ffffff;
-  padding: 3px;
-  border-radius: 5px;
-  transition: 0.3s ease;
-}
-.btn-menus{
-    background-color: #218838;
-    color: #ffffff;
-}
-
-  /* test menu */
-.menu {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.menu li {
-  position: relative;
-  display: inline-block;
-}
-
-.menu > li > a {
-
-  color: white;
-  text-decoration: none;
-}
-
+/* submenu style */
 .submenu {
   display: none;
   position: absolute;
@@ -153,7 +143,7 @@ a:hover{
 .about-container{
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    /* grid-template-columns: repeat(auto-fill,minmax(700px,1fr)); */
+   
     gap: 30px;
     margin-top: 120px;
     
@@ -169,7 +159,7 @@ a:hover{
     background-color: rgb(255, 255, 255);
     margin-left: 30px;
     box-shadow:  0px 0px 15px rgba(0, 0, 0, 0.1); 
-    /* box-shadow: 0 0 10px rgb(139, 108, 108); */
+
 }
 .provided-services .service{
     
@@ -368,13 +358,13 @@ a:hover{
 @media(max-width:768px){
    /* about heading respnsive */
    .about-heading{
-    min-width: 750px;
+   max-width: 400px;
     
    }
 
     .about-container{
         grid-template-columns: 1fr;
-        min-width: 750px;
+       max-width: 400px;
         
     }
     
@@ -396,9 +386,11 @@ a:hover{
 
 }
 /* call to action Responsive */
-.call-to-action{
-    min-width: 750px;
-    max-width: 100%;
+ /* call to action section Responsive style here */
+section.call-to-action{
+   max-width: 400px;
+  
+   
     
 
 } 
@@ -406,17 +398,18 @@ a:hover{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     gap: 10px;
-    
+    max-width: 400px;
     
 }
 
 .call-to-action .container .call-to-actions-infor h4{
     
-    font-size: 50px;
+    font-size: 30px;
     font-weight: 700;
     color: rgb(255, 255, 255);
-    line-height: 70px;
+    line-height: 50px;
     
 }
 .call-to-actions-btns{
@@ -428,16 +421,16 @@ a:hover{
 }
 .call-to-actions-btns .discover {
 
-     font-size: 30px;
-    padding: 20px 30px;
-    border-radius: 20px;
+     font-size: 15px;
+    padding: 10px 10px;
+    border-radius: 10px;
     letter-spacing: 0.5px;
     
 }
 .call-to-actions-btns a{
 
-     font-size: 30px;
-    padding: 20px 30px;
+     font-size: 20px;
+    padding: 10px 20px;
     border-radius: 20px;
     letter-spacing: 0.5px;
     
@@ -445,55 +438,64 @@ a:hover{
 /* steps responsive */
 
   /* left content responsive style */
+   .steps-to-do .container{
+    display: grid;
+    grid-template-columns: 1fr;
+    max-width: 400px;
+   }
+ 
  .steps-to-do .container .left-contents{
-    grid-column: 1/span 5;
-    min-width: 700px;
-    margin-top: 30px;
- }
+display: grid;
+  grid-template-columns: 1fr;
+ gap: 10px;
+max-width: 400px;
+   
+ } 
  .container .left-contents .left-contents-infor h4{
-    font-size: 30px;
+    font-size: 20px;
     font-weight: 600;
-    line-height: 60px;
-    margin-bottom: 50px;
-    text-align: center;
+    line-height: 40px;
+    margin-bottom: 20px;
+ 
 }
 
 
  .container .left-contents .left-contents-infor p{
-    font-size: 30px;
-    line-height: 50px;
+    font-size: 15px;
+    line-height: 30px;
     text-align: center;
     color: rgb(33, 39, 65);
     margin-bottom: 40px;
 }
 
 .left-contents .discover-btn a{
-    font-size: 30px;
-    padding: 30px 60px;
+    font-size: 20px;
+    padding: 20px 30px;
     border-radius: 15px;
-    font-weight: 700;
-    margin-left: 30px;
+    font-weight: 600;
+   margin-left: 50px;
     
     
 
 }
 
  /* right content responsive style */
- .container .right-contents{
-
+ 
+.container .right-contents{
     display: grid;
-    grid-template-columns: 1fr;
-    grid-column: 1/span 5; 
-   gap: 20px;
-   min-width: 750px;
-   margin-top: 60px;
+    grid-template-columns:1fr;
+    grid-column: 1/span 5;
+    gap: 20px;
+    margin-left: 30px;
+    margin-top: 20px;
+   max-width: 400px;
    
-   
-} 
+}
+ 
 .container .right-contents .item {
 
     border-radius: 15px;
-    padding: 80px 60px;
+    padding: 40px 20px;
     width: 100%;
     height: 250px;
     position: relative;
@@ -502,20 +504,20 @@ a:hover{
 .container .right-contents .item em{
     position: absolute;
     font-style: normal;
-    font-size: 80px;
+    font-size: 40px;
     font-weight: 700;
     right: 20px;
     top: 20px;
 }
 
 .container .right-contents .item h4{
-    font-size: 35px;
+    font-size: 20px;
     font-weight: 600;
     margin-bottom: 22px;
 }
 
 .container .right-contents .item p{
-    font-size: 30px;
+    font-size: 20px;
     line-height: 45px;
     color: #212741;
 }
