--- a/Pages/contactus.css
+++ b/Pages/contactus.css
@@ -14,85 +14,85 @@ body{
 }
 
 
+
 .container{
-    max-width: 1120px;
-    margin-inline:auto;
+    width: min(90%, 1320px);
+    margin-inline: auto;
 }
-/* header menu style */
-nav{
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  /* display: flex; */
+
+/* nav bar style */
+header{
+
+    position: fixed;
+    height: 110px;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+    background-color: rgba(32, 48, 59,0.9);
+}
+header .main-nav{
+  display: flex;
+  gap: 30px;
+  justify-content: space-between;
+  align-items: center;
+
+}
+.main-nav .nav-links{
+ display: flex;
+ gap: 20px;
+ align-items: center;
+ justify-content: center;
+
   
 }
-.desktop{
-background-color: #111;
-width: 100%;
-height: 3.3rem;
-display: flex;
-justify-content: space-between;
-align-items: center;
-padding: 20px;
+.main-nav .logo-img{
+  max-height: 110px;
+    line-height: 80px;
+    color: #fff;
+    font-size: 28px;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    padding: 20px;
 }
-.desktop h1{
-    margin-top: 1.5rem;
-    color: white;
+.main-nav img{
+    width: 100%;
+    /* overflow: hidden; */
 }
-
-img{
-    width: 80px;
-}
-.logo{
-    margin-top: 5px;
-    display: flex;
-}
-
-.link-menus{
+.nav-links li{
+    padding-left: 25px;
+    padding-right: 25px;
     list-style: none;
-    gap: 2rem;
-    display: flex;
-   
+}
+.nav-links li a{
+  text-decoration: none;
+    font-weight: 300;
+    font-size: 14px;
+    text-transform: capitalize;
+    color: #fff;
+    height: 40px;
+    line-height: 40px;
+    border: transparent;
+    letter-spacing: 1px;
 }
 
-a{
-    color: white;
-   text-transform: uppercase;
-    text-decoration: none;
+.nav-links li .contact-us{
+    font-size: 14px;
+    color: #fff;
+    background-color: #43ba7f;
+    padding: 10px 20px !important;
+    display: inline-block;
+    border-radius: 5px;
+    font-weight: 500;
+    text-transform: capitalize;
+    height: auto;
+    line-height: 25px;
+    letter-spacing: 0.5px;
+    transition: all .3s;
     
 }
-
-a:hover{
-  background-color: #218838;
-  color: #ffffff;
-  padding: 3px;
-  border-radius: 5px;
-  transition: 0.3s ease;
-}
-.btn-menus{
-    background-color: #218838;
-    color: #ffffff;
-}
-
-  /* test menu */
-.menu {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.menu li {
-  position: relative;
-  display: inline-block;
-}
-
-.menu > li > a {
-
-  color: white;
-  text-decoration: none;
-}
-
+/* submenu style */
 .submenu {
   display: none;
   position: absolute;
