--- a/Pages/ourservices.css
+++ b/Pages/ourservices.css
@@ -14,84 +14,83 @@ body{
 
 
 .container{
-    max-width: 1120px;
-    margin-inline:auto;
+    width: min(90%, 1320px);
+    margin-inline: auto;
 }
-/* header menu style */
-nav{
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  /* display: flex; */
+
+/* nav bar style */
+header{
+
+    position: fixed;
+    height: 110px;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+    background-color: rgba(32, 48, 59,0.9);
+}
+header .main-nav{
+  display: flex;
+  gap: 30px;
+  justify-content: space-between;
+  align-items: center;
+
+}
+.main-nav .nav-links{
+ display: flex;
+ gap: 20px;
+ align-items: center;
+ justify-content: center;
+
   
 }
-.desktop{
-background-color: #111;
-width: 100%;
-height: 3.3rem;
-display: flex;
-justify-content: space-between;
-align-items: center;
-padding: 20px;
+.main-nav .logo-img{
+  max-height: 110px;
+    line-height: 80px;
+    color: #fff;
+    font-size: 28px;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    padding: 20px;
 }
-.desktop h1{
-    margin-top: 1.5rem;
-    color: white;
+.main-nav img{
+    width: 100%;
+    /* overflow: hidden; */
 }
-
-img{
-    width: 80px;
-}
-.logo{
-    margin-top: 5px;
-    display: flex;
-}
-
-.link-menus{
+.nav-links li{
+    padding-left: 25px;
+    padding-right: 25px;
     list-style: none;
-    gap: 2rem;
-    display: flex;
-   
+}
+.nav-links li a{
+  text-decoration: none;
+    font-weight: 300;
+    font-size: 14px;
+    text-transform: capitalize;
+    color: #fff;
+    height: 40px;
+    line-height: 40px;
+    border: transparent;
+    letter-spacing: 1px;
 }
 
-a{
-    color: white;
-   text-transform: uppercase;
-    text-decoration: none;
+.nav-links li .contact-us{
+    font-size: 14px;
+    color: #fff;
+    background-color: #43ba7f;
+    padding: 10px 20px !important;
+    display: inline-block;
+    border-radius: 5px;
+    font-weight: 500;
+    text-transform: capitalize;
+    height: auto;
+    line-height: 25px;
+    letter-spacing: 0.5px;
+    transition: all .3s;
     
 }
-
-a:hover{
-  background-color: #218838;
-  color: #ffffff;
-  padding: 3px;
-  border-radius: 5px;
-  transition: 0.3s ease;
-}
-.btn-menus{
-    background-color: #218838;
-    color: #ffffff;
-}
-
-  /* test menu */
-.menu {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.menu li {
-  position: relative;
-  display: inline-block;
-}
-
-.menu > li > a {
-
-  color: white;
-  text-decoration: none;
-}
-
+/* submenu style */
 .submenu {
   display: none;
   position: absolute;
@@ -381,13 +380,13 @@ a:hover{
 /* Responsive Design For Mobiles and Tablets */
 @media(max-width:768px){
     .services-heading{
-    min-width: 750px;
+    max-width: 400px;
     
    }
 
     .services-heading-container{
         grid-template-columns: 1fr;
-        min-width: 750px;
+        max-width: 400px;
         
     }
     /* main service responsive style */
@@ -396,11 +395,12 @@ a:hover{
     flex-direction: column;
     align-self: center;
     justify-content: center;
-    min-width: 700px;
+  
+    max-width: 400px;
     
 }
 .container .main-services-content h4{
-    font-size: 50px;
+    font-size: 30px;
     font-weight: 800;
 }
 
@@ -411,8 +411,8 @@ a:hover{
 }
 /* call to actions responsive style */
 .call-to-action{
-    min-width: 750px;
-    max-width: 100%;
+    /* min-width: 750px; */
+    max-width: 400px;
     
 
 } 
@@ -427,10 +427,10 @@ a:hover{
 
 .call-to-action .container .call-to-actions-infor h4{
     
-    font-size: 50px;
-    font-weight: 700;
+    font-size: 30px;
+    font-weight: 500;
     color: rgb(255, 255, 255);
-    line-height: 70px;
+    line-height: 50px;
     
 }
 .call-to-actions-btns{
@@ -442,34 +442,35 @@ a:hover{
 }
 .call-to-actions-btns .discover {
 
-     font-size: 30px;
-    padding: 20px 30px;
+     font-size: 20px;
+    padding: 10px 10px;
     border-radius: 20px;
     letter-spacing: 0.5px;
     
 }
 .call-to-actions-btns a{
 
-     font-size: 30px;
-    padding: 20px 30px;
+     font-size: 20px;
+    padding: 10px 15px;
     border-radius: 20px;
     letter-spacing: 0.5px;
+   
     
 }
 /* section Details responsive style */
 .service-details .container .service-heading{
-    min-width: 700px;
+    max-width:400px;
 }
 .service-details .container .service-heading h6{
-    font-size: 40px;
-    font-weight: 700;
-    margin-bottom: 20px;
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
 }
 .service-details .container .service-heading h4{
      margin-top: 10px;
-    line-height: 70px;
-    font-size: 60px;
-    font-weight: 800;
+    line-height: 60px;
+    font-size: 30px;
+    font-weight: 600;
     text-align: center;
 } 
 /* service Details responsive style */
@@ -480,7 +481,7 @@ a:hover{
     align-items: center;
     justify-content: center;
     text-align: center;
-    min-width: 700px;
+    max-width: 400px;
 }
 .service-details-content{
     display: flex;
@@ -488,36 +489,36 @@ a:hover{
     justify-content: center;
     align-items: center;
     gap: 40px;
-    min-width: 700px; 
+    max-width:400px; 
 }
 .service-tabs span{
-    padding: 30px 40px;
+    padding: 20px 30px;
     text-align: center;
     border-radius: 10px;
-    font-size: 30px;
+    font-size: 15px;
     
 }
 /* service right content responsive style */
 
 .service-right-content h4{
-    font-size: 40px;
-    font-weight: 800;
-    line-height: 70px;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 50px;
     text-align: center;
     
 }
 .service-right-content p{
-    margin-bottom: 30px;
-    font-size: 30px;
-    line-height:50px;
+    margin-bottom: 20px;
+    font-size: 15px;
+    line-height:30px;
     text-align: center;
     
 }
 .service-right-content span {
 
-    font-size:30px;
-    font-weight: 600;
-    line-height: 40px;
+    font-size:20px;
+    font-weight: 400;
+    line-height: 20px;
     text-align: center;
     
 }
