--- a/home.css
+++ b/home.css
@@ -11,87 +11,84 @@ body {
   background: #f9f9f9;
 }
 
-
 .container{
-    width: min(90%, 1120px);
+  max-width: 1320px;
     margin-inline: auto;
 }
-nav{
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  display: flex; 
-  justify-content: center;
+
+/* nav bar style */
+header{
+
+    position: fixed;
+    height: 110px;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+    background-color: rgba(32, 48, 59,0.9);
+}
+header .main-nav{
+  display: flex;
+  gap: 30px;
+  justify-content: space-between;
   align-items: center;
+
+}
+.main-nav .nav-links{
+ display: flex;
+ gap: 20px;
+ align-items: center;
+ justify-content: center;
+
   
 }
-.desktop{
-background-color: #111;
-width: 100%;
-height: 3.3rem;
-display: flex;
-justify-content: space-between;
-align-items: center;
-padding: 20px;
+.main-nav .logo-img{
+  max-height: 110px;
+    line-height: 80px;
+    color: #fff;
+    font-size: 28px;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    padding: 20px;
 }
-.desktop h1{
-    margin-top: 1.5rem;
-    color: white;
+.main-nav img{
+    width: 100%;
+    /* overflow: hidden; */
 }
-
-img{
-    width: 80px;
-}
-.logo{
-    margin-top: 5px;
-    display: flex;
-}
-
-.link-menus{
+.nav-links li{
+    padding-left: 25px;
+    padding-right: 25px;
     list-style: none;
-    gap: 2rem;
-    display: flex;
-   
+}
+.nav-links li a{
+  text-decoration: none;
+    font-weight: 300;
+    font-size: 14px;
+    text-transform: capitalize;
+    color: #fff;
+    height: 40px;
+    line-height: 40px;
+    border: transparent;
+    letter-spacing: 1px;
 }
 
-a{
-    color: white;
-   text-transform: uppercase;
-    text-decoration: none;
+.nav-links li .contact-us{
+    font-size: 14px;
+    color: #fff;
+    background-color: #43ba7f;
+    padding: 10px 20px !important;
+    display: inline-block;
+    border-radius: 5px;
+    font-weight: 500;
+    text-transform: capitalize;
+    height: auto;
+    line-height: 25px;
+    letter-spacing: 0.5px;
+    transition: all .3s;
     
 }
-
-a:hover{
-  background-color: #218838;
-  color: #ffffff;
-  padding: 3px;
-  border-radius: 5px;
-  transition: 0.3s ease;
-}
-.btn-menus{
-    background-color: #218838;
-    color: #ffffff;
-}
-
-  /* test menu */
-.menu {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.menu li {
-  position: relative;
-  display: inline-block;
-}
-
-.menu > li > a {
-
-  color: white;
-  text-decoration: none;
-}
-
+/* submenu style */
 .submenu {
   display: none;
   position: absolute;
@@ -113,6 +110,8 @@ a:hover{
 .dropdown:hover .submenu {
   display: block;
 }
+
+
 
 /* Hero section */
 .hero {
@@ -173,88 +172,7 @@ a:hover{
 .mobile-menu{
     display: none;
 }
-/* Responsive */
-@media (max-width: 768px) {
-  .hero h1 {
-    font-size: 32px;
-  }
-
-  .desktop{
-    display: none;
-  }
-
-  .hero p {
-    font-size: 16px;
-  }
-  /* services section Responsive here 
-  /* call to action section Responsive style here */
-.call-to-action{
-    min-width: 750px;
-    max-width: 100%;
-    background-color: red;
-    
-
-} 
-.call-to-action .container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-    
-    
-}
-
-.call-to-action .container .call-to-actions-infor h4{
-    
-    font-size: 50px;
-    font-weight: 700;
-    color: rgb(255, 255, 255);
-    line-height: 70px;
-    
-}
-.call-to-actions-btns{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 40px;
-    margin-top: 20px;
-}
-.call-to-actions-btns .discover {
-
-     font-size: 30px;
-    padding: 20px 30px;
-    border-radius: 20px;
-    letter-spacing: 0.5px;
-    
-}
-.call-to-actions-btns a{
-
-     font-size: 30px;
-    padding: 20px 30px;
-    border-radius: 20px;
-    letter-spacing: 0.5px;
-    
-}
-/* about us section Responsive style */
-  .content-container {
-    flex-direction: column;
-  }
-  
-/* service section style */
-
-/* testimonials section Responsive style */  
-  .testimonial-card {
-    flex-direction: column;
-    text-align: center;
-  }
-
-  .testimonial-content {
-    text-align: center;
-  }
-  
-  
-}
-
+/* Sevices style */
 .services-container{
     display: grid;
     grid-template-columns: repeat(2,1fr);
@@ -734,4 +652,115 @@ footer p{
 footer p a{
     text-decoration: none;
     color: #ff511a;
+}
+
+/* RESPONSIVE DESIGN */
+@media (max-width: 768px) {
+  .hero h1 {
+    font-size: 32px;
+  }
+
+  .desktop{
+    display: none;
+  }
+
+  .hero p {
+    font-size: 16px;
+  }
+    /* services section Responsive style */
+
+
+    .services-container{
+      margin-top: 120px;
+      display: grid;
+      grid-template-columns: 1fr;
+    max-width: 400px;
+      gap: 20px;
+     
+
+        
+    }
+  
+    
+  /* call to action section Responsive style here */
+.call-to-action{
+   max-width: 400px;
+   margin-top: 50px;
+    
+
+} 
+.call-to-action .container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    max-width: 400px;
+    
+    
+}
+
+.call-to-action .container .call-to-actions-infor h4{
+    
+    font-size: 30px;
+    font-weight: 600;
+    color: rgb(255, 255, 255);
+    line-height: 70px;
+    
+}
+.call-to-actions-btns{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+    margin-top: 20px;
+}
+.call-to-actions-btns .discover {
+
+     font-size: 20px;
+    padding: 10px 20px;
+    border-radius: 20px;
+    letter-spacing: 0.5px;
+    
+}
+.call-to-actions-btns a{
+
+     font-size: 20px;
+    padding: 10px 20px;
+    border-radius: 20px;
+    letter-spacing: 0.5px;
+    
+}
+/* about us section Responsive style */
+.about-us{
+  display: grid;
+  grid-template-columns: 1fr;
+  max-width: 400px;
+}
+  .content-container {
+    flex-direction: column;
+    
+  }
+  
+/* calculator Responsive style */
+.calculator{
+  display: grid;
+  grid-template-columns: 1fr;
+  max-width: 400px;
+}
+.calculator .container{
+  max-width: 400px;
+}
+
+/* testimonials section Responsive style */  
+  .testimonial-card {
+    flex-direction: column;
+    text-align: center;
+   
+  }
+
+  .testimonial-content {
+    text-align: center;
+  }
+  
+  
 }
